--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 	<title>My favorite songs - Reinza</title>
-	<link rel="icon" type="image" href="d:\AOP-DT.REINZA\AOP\logo-loren.png">
+	<link rel="icon" type="image" href="logo-loren.png">
 	<link rel="stylesheet" type="text/css" href="AOP-CSS.css">
 </head>
 <body>
 	<div class="header">
   		<h1>
 			<a class="logo-link" href="DT-REI/index.html" aria-label="Go to NISN form">
-      <img src="d:\AOP-DT.REINZA\AOP\logo-loren.png" alt="logo" width="67" height="67"></a>
+      <img src="logo-loren.png" alt="logo" width="67" height="67"></a>
     		3-Card Music Player - Reinza
 		</h1>
 
@@ -19,21 +19,21 @@
 
 	<article class="cards">
 	<div class="card_wickedgames">
-		<img src="d:\AOP-DT.REINZA\AOP\hob.jpg">
+		<img src="hob.jpg">
 		<h2>THE WEEKND</h2>
 		<p>Wicked Games</p>
 		<audio src="d:\AOP-DT.REINZA\AOP\T.Q-WG.mp3" controls="play,pause"></audio>
 	</div>
 	
 	<div class="card_lifeoftheparty">
-	  <img src="d:\AOP-DT.REINZA\AOP\trilogy.jpg">
+	  <img src="trilogy.jpg">
 	  <h2>THE WEEKND</h2>
 		<p>Life Of The Party</p>
 		<audio src="d:\AOP-DT.REINZA\AOP\T.W-LOTP.mp3" controls="play,pause"></audio>
 	</div>
 
 	<div class="card_themorning">
-	  <img src="d:\AOP-DT.REINZA\AOP\hob.jpg">
+	  <img src="hob.jpg">
 	  <h2>THE WEEKND</h2>
 		<p>The Morning</p>
 		<audio src="d:\AOP-DT.REINZA\AOP\T.Q-TM.mp3" controls="play,pause"></audio>
@@ -42,7 +42,7 @@
 	
 	
 	<div class= "kesan">
-	  <img src= "d:\AOP-DT.REINZA\AOP\raepic.jpg" alt="next" width="100" height="110">
+	  <img src= "raepic.jpg" alt="next" width="100" height="110">
 	  <h2>Kesan & Pesan</h2>
 	  <p>Alasan memilih lagu-lagu ini?</p>
 	  <ol>
@@ -56,4 +56,5 @@
 	
 
 </body> 
+
 </html>
