--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My favorite songs - Reinza</title>
+	<title>My favorite musik - Reinza</title>
 	<link rel="icon" type="image" href="logo-loren.png">
 	<link rel="stylesheet" type="text/css" href="AOP-CSS.css">
 </head>
@@ -58,3 +58,4 @@
 </body> 
 
 </html>
+
