Fix HTML formatting and update audio file paths

--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 		<img src="hob.jpg">
 		<h2>THE WEEKND</h2>
 		<p>Wicked Games</p>
-		<audio src="d:\AOP-DT.REINZA\AOP\T.Q-WG.mp3" controls="play,pause"></audio>
+		<audio src="T.Q-WG.mp3" controls="play,pause"></audio>
 	</div>
 	
 	<div class="card_lifeoftheparty">
 	  <img src="trilogy.jpg">
 	  <h2>THE WEEKND</h2>
 		<p>Life Of The Party</p>
-		<audio src="d:\AOP-DT.REINZA\AOP\T.W-LOTP.mp3" controls="play,pause"></audio>
+		<audio src="T.W-LOTP.mp3" controls="play,pause"></audio>
 	</div>
 
 	<div class="card_themorning">
 	  <img src="hob.jpg">
 	  <h2>THE WEEKND</h2>
 		<p>The Morning</p>
-		<audio src="d:\AOP-DT.REINZA\AOP\T.Q-TM.mp3" controls="play,pause"></audio>
+		<audio src="T.Q-TM.mp3" controls="play,pause"></audio>
 	</div> </article>
 
 	
@@ -58,4 +58,5 @@
 </body> 
 
 </html>
+
 
